--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Document</title>
+	<title>Coursera test</title>
 </head>
 <body>
-<h1>CourCour</h1>
+<h1>Acceuil</h1>
 </body>
 </html>
